package log_analytics_proto;

message req_msg {
  optional string req_id                  = 1; 
  optional int32  req_type                = 2; // ENUM(all_visitors_stats = 1, latest_visitors_stats = 2)
  optional req_payload_struct req_payload = 3;        
}
message req_payload_struct {
  optional string hostname      = 1;
  optional int32 scale          = 2; // ENUM(hourly = 1, daily = 2(default), weekly = 3, monthly = 4).only applicable for req_type=1  
  optional int64 time_from      = 3; // only applicable for req_type = 1
  optional int64 time_to        = 4; // only applicable for req_type = 1
  optional int64 visitors_count = 5; // only applicable for req_type = 2
}

message resp_msg {
  optional string req_id    = 1;
  optional resp_struct resp = 2;
  optional debug_msg dbg    = 3;
}

message resp_struct {
  optional int64 page_views                              = 1; // only applicable for req_type = 1
  optional int64 total_visits                            = 2; // only applicable for req_type = 1
  optional int64 unique_visits                           = 3; // only applicable for req_type = 1
  optional double pages_per_visit                        = 4; // only applicable for req_type = 1
  optional int64 avg_visit_duration                      = 5; // only applicable for req_type = 1
  repeated visit_struct visit_arr_all                    = 6; // only applicable for req_type = 1
  repeated visit_struct visit_arr_html                   = 7; // only applicable for req_type = 1
  repeated last_visitors_struct last_visitors_arr        = 8; // only applicable for req_type = 2            
}

message visit_struct {
  optional int64 visit_time = 1; 
  optional int64 num_visits = 2; 
}

message last_visitors_struct {
  optional string ip_addr            = 1;
  optional int64  last_hit_timestamp = 2;
  optional int64 hit_count           = 3;
}

message debug_msg {
  optional double query_time = 1;
  optional string ctrl_msg   = 2;
}

